# Glassy-Notes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  splashscreen.html  vite.config.js  vite.config.js.timestamp-1694514884053-2ebe00bdef992.mjs
.github/workflows/: codeql.yml
src/: App.css  App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Emoticons.ts  MenuBar.scss  MenuItem.jsx  MenuItem.scss  NoteMenuBar.jsx  NoteWindow.jsx  Notification.jsx  styles.scss
