[package]
name = "glassy_notes"
version = "0.1.3"
description = "Better Notes"
authors = ["you"]
license = ""
repository = "https://github.com/greeenboi/Glassy-Notes"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-message", "dialog-open", "dialog-save", "notification-all", "fs-remove-file", "path-all", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
